241022_Docker2Kubernetes/5_k8s_example_apps/vaultwarden/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden-svc
  namespace: my-vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 5000
